[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=47.2.0",
    "setuptools_scm[toml]",
]

[project]
name = "geojson-svg-overlay"
authors = [
  { name="Bastian Krause", email="basti@randomprojects.de" },
]
description = "Overlays geojson polygons on a given SVG map"
readme = "README.rst"
license = { file="LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "geojson",
    "cairosvg",
]
dynamic = ["version"]  # via setuptools_scm

[project.urls]
"Homepage" = "https://github.com/freieslabor/geojson-svg-overlay"
"Bug Tracker" = "https://github.com/freieslabor/geojson-svg-overlay/issues"

[project.scripts]
geojson-svg-overlay = "geojson_svg_overlay.main:main"
